tests/ui/consts/required-consts/collect-in-dead-vtable.opt.stderr
error[E0080]: evaluation panicked: explicit panic
  --> $DIR/collect-in-dead-vtable.rs:9:19
   |
LL |     const C: () = panic!();
   |                   ^^^^^^^^ evaluation of `Fail::<i32>::C` failed here

note: erroneous constant encountered
  --> $DIR/collect-in-dead-vtable.rs:22:21
   |
LL |             let _ = Fail::<T>::C;
   |                     ^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn <Vec<i32> as MyTrait>::not_called`
  --> $DIR/collect-in-dead-vtable.rs:31:40
   |
LL |         let gen_vtable: &dyn MyTrait = &v; // vtable is "mentioned" here
   |                                        ^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
